--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		Sekolah : SMK-SMAK Bogor
 </p>
 <p>Hobby: Main <br>
-<img src="Hobby.PNG"><br>
+<img src="Hobby.png"><br>
 <h2></h2>
 </body>
 </html>
