--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<b>social media : </b> Instagram : @alfanza_r <br> 
 		Sekolah : SMK-SMAK Bogor
 </p>
-<p>Hobby: Main <br>
+<p>Hobby: Main Motor <br>
 <img src="Hobby.png"><br>
 <h2></h2>
 </body>
